<resources>
    <string name="app_name">Health Monitoring</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Heart Health Monitoring</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hr_history">Heart Rate History</string>
    <string name="view_profile">View Profile</string>
    <string name="check_my_pulse">Check My Pulse</string>
    <string name="contact_doctor">Contact Doctor</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="office_label">Office Phone Number</string>
    <string name="email_our_office">Email Our Office</string>
    <string name="disclaimer">Disclaimer: This is not an Emergency Phone Number. If you are in need of urgent attention, please call 911 immediately!</string>
    <string name="title_activity_checkPulse">Check My Pulse</string>
    <string name="title_activity_heartHistory">Heart History</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_contactDoctor">Contact Doctor</string>
    <string name="stop">Stop</string>
    <string name="DOB">Date of Birth</string>
    <string name="CAPABILITY_MOBILE">MOBILE</string>
    <string name="CAPABILITY_ANDROID_WEAR">WEARABLE</string>
    <string name="my_patients">My Patients</string>
    <string name="view_alerts">View Alerts</string>

    <string-array name="android_wear_capabilities">
        <item>@string/CAPABILITY_MOBILE</item>
    </string-array>
    <string name="title_activity_change_threshold">ChangeThreshold</string>
</resources>
