<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.healthmonitoring.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btn_check_my_pulse"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/check_my_pulse_button"
                android:tint="@color/colorAccent"
                android:tintMode="multiply" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/check_my_pulse"
                android:background="#66000000"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-condensed"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/btn_hr_history"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_img"
                android:tint="@color/colorPrimary"
                android:tintMode="multiply" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/hr_history"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-condensed"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btn_view_profile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_img" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#88000000"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/view_profile"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-condensed"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btn_contact_doctor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_img" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#88000000"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/contact_doctor"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-condensed"
                android:textSize="25sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
