<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.example.healthmonitoring.ViewProfileActivity">

    <LinearLayout
        android:id="@+id/activity_view_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/profile_Image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/profile_img" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/tv_First_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/tv_Last_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/tv_DOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DOB"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/tv_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/tv_Emergency_Contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorAccent">

            <TextView
                android:id="@+id/tv_HR_Limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:text="Hello"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:focusable="false"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/tv_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/tv_City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/tv_State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>
